<resources>
    <string name="app_name">MakeVideo</string>
    <string name="denied_permision">You need to grant permission before manipulating</string>
    <string name="back">Back</string>
    <string name="error_intent">There was an unexpected error, please try again</string>
    <string name="play">Play</string>
    <string name="brush">Paint</string>
    <string name="label_text">Text</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_filter">Filter</string>
    <string name="opacity">Opacity</string>
    <string name="size_brush">Size</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="permission">You need to grant the application permission to be able to use it in the best way...</string>
    <string name="try_again">Try Again</string>
    <string name="step_next">Next</string>
    <string name="pull_up_to_continue">Photo list</string>
    <string name="change_list_image">Change photo list</string>
    <string name="change_list_effect">Change the list of effects</string>
    <string name="change_list_timer">Change time</string>
    <string name="change_list_music">Change sound</string>
    <string name="change_list_frame">Change the frame</string>
    <string name="change_list_quality">Quality changes</string>
    <string name="second_1">1 second</string>
    <string name="second_2">2 second</string>
    <string name="second_3">3 second</string>
    <string name="second_4">4 second</string>
    <string name="second_5">5 second</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Video is being created, please wait a moment!</string>
    <string name="please_wait2">Video is being Saved...</string>
    <string name="move_image">Click and hold the image to change position</string>
    <string name="save_video">Save video</string>
    <string name="add_image">Add More Images</string>
    <string name="watching">Watching</string>
    <string name="edit_image">Edit Image</string>
    <string name="edit_index_image">Edit Picture Order</string>
    <string name="errror">There was an error, please try again</string>
    <string name="need_3_image">You must have at least 3 photos in the list</string>
    <string name="create_video">Create Video</string>
    <string name="apply_in_video">Applying to the video...</string>
    <string name="apply_success">Apply successfully</string>
    <string name="saving">Saving...</string>
    <string name="save_success">Save Successfully</string>
    <string name="save_fail">Save Failed</string>
    <string name="ques_save_image">Do you want to exit and save the image?</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="cut_sound">Cut Sound</string>
    <string name="alert">Alert</string>
    <string name="yes">Agree</string>
    <string name="apply_sound">Do you want to apply this cut music file as background music?</string>
    <string name="save_video_success">Save video successfully</string>
    <string name="save_video_fail">Save video failed</string>
    <string name="ques_cancel_video">Do you want to cancel video creation? In case the video has been successfully created before, the video will be deleted!</string>
    <string name="mobile_not_sup">Phone not supported</string>
    <string name="cancel_success">Successfully canceled</string>
    <string name="ques_delete">Are you sure you want to delete this file?</string>
    <string name="delete_suc">Delete file successfully</string>
    <string name="saving_first">Saving photos, please wait...</string>
    <string name="saving_second">Saving sounds, please wait...</string>
    <string name="share_via">Share via: </string>
    <string name="email_via">Email via...</string>
    <string name="list_image">*  List Images</string>
    <string name="list_image2">List Images</string>
    <string name="list_effect">* List Effects</string>
    <string name="list_sound">* List Sounds</string>
    <string name="list_frame">* List Picture Frames</string>
    <string name="time">* Timer</string>
    <string name="resolution">* Video Resolution</string>
    <string name="image_created">Created Images</string>
    <string name="video_created">Created Videos</string>
    <string name="file_created">List Created</string>
    <string name="stop_video">Cancel successful video initialization</string>
    <string name="share">Share</string>
    <string name="wait">Please wait a second</string>
    <string name="string_shorter">This track is shorter than the current video!</string>
    <string name="alert_exit">Do you want exit application?</string>
    <string name="alert_exit_select">Do you want to cancel the video initialization operation, the data will be canceled?</string>
    <string name="view_share_tran">share_element_thumbail</string>
    <string name="version">Versions: </string>
    <string name="release">Released by: Iken Company</string>
    <string name="email_send">ochung3@gmail.com</string>
    <string name="copyright_2019">copyright © - 2019</string>
    <string name="ok">OK</string>
    <string name="send">Send</string>
    <string name="content">Content</string>
    <string name="title">Title</string>
    <string name="error_input">Please enter content!</string>
    <string name="share_app">\nLet me recommend you this application\n\n</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_content">If you have any questions or problems related to the application, please send us your feedback!</string>
</resources>
