<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="handler"
            type="com.khacchung.makevideo.handler.MyClickHandler" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_home"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgNameApp"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_33sdp"
                android:layout_gravity="center"
                android:layout_marginTop="?attr/actionBarSize"
                android:src="@drawable/img_name_app" />

            <ImageView
                android:id="@+id/imgThumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_24sdp"
                android:src="@drawable/img_thumbnail"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnEditImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:background="@drawable/background_button_home"
                android:onClick="@{(v)->handler.onClick(v)}"
                android:padding="24dp"
                android:text="@string/edit_image"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btnCreateVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnEditImage"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_button_home"
                android:onClick="@{(v)->handler.onClick(v)}"
                android:padding="24dp"
                android:text="@string/create_video"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btnCreatedFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnCreateVideo"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_button_home"
                android:onClick="@{(v)->handler.onClick(v)}"
                android:padding="24dp"
                android:text="@string/file_created"
                android:textColor="@color/colorPrimary" />

            <FrameLayout
                android:id="@+id/fmFeedBack"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_16sdp">

                <Button
                    android:id="@+id/btnFeedBack"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/background_circle_home"
                    android:fontFamily="@font/fontawesome_solid"
                    android:onClick="@{(v)->handler.onClick(v)}"
                    android:text="&#xf4ad;"
                    android:textColor="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fmShare"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_16sdp"
                android:layout_toEndOf="@+id/fmFeedBack">

                <Button
                    android:id="@+id/btnShare"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/background_circle_home"
                    android:fontFamily="@font/fontawesome_solid"
                    android:onClick="@{(v)->handler.onClick(v)}"
                    android:text="&#xf1e0;"
                    android:textColor="@color/white" />
            </FrameLayout>


            <FrameLayout
                android:id="@+id/fmOut"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_16sdp">

                <Button
                    android:id="@+id/btnOut"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/background_circle_home"
                    android:fontFamily="@font/fontawesome_solid"
                    android:onClick="@{(v)->handler.onClick(v)}"
                    android:text="&#xf2f5;"
                    android:textColor="@color/white" />
            </FrameLayout>


            <FrameLayout
                android:id="@+id/fmMore"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_16sdp"
                android:layout_toStartOf="@+id/fmOut">

                <Button
                    android:id="@+id/btnMore"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/background_circle_home"
                    android:fontFamily="@font/fontawesome_solid"
                    android:onClick="@{(v)->handler.onClick(v)}"
                    android:text="&#xf129;"
                    android:textColor="@color/white" />
            </FrameLayout>
        </RelativeLayout>


    </LinearLayout>
</layout>